jdk/test/whitebox/CPUInfoTest.java failed with "not all features are known: expected true, was false"

XMLWordPrintable

    • b21
    • x86_64
    • generic
    • Verified

      The following test failed in the JDK20 CI:

      jdk/test/whitebox/CPUInfoTest.java

      Here's a snippet from the log fie:

      #section:main
      ----------messages:(6/371)----------
      command: main -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI CPUInfoTest
      reason: User specified action: run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI CPUInfoTest
      started: Mon Oct 24 16:10:03 UTC 2022
      Mode: othervm [/othervm specified]
      finished: Mon Oct 24 16:10:03 UTC 2022
      elapsed time (seconds): 0.363
      ----------configuration:(0/0)----------
      ----------System.out:(4/1155)----------
      WB.getCPUFeatures(): "(12 cores per cpu, 2 threads per core) family 25 model 1 stepping 1 microcode 0x0, cx8, cmov, fxsr, ht, mmx, 3dnowpref, sse, sse2, sse3, ssse3, sse4a, sse4.1, sse4.2, popcnt, lzcnt, tsc, avx, avx2, aes, erms, clmul, bmi1, bmi2, adx, sha, fma, vzeroupper, clflush, clflushopt, hv, rdtscp, rdpid, f16c, pku"
      CPUInfo.getAdditionalCPUInfo(): "(12 cores per cpu, 2 threads per core) family 25 model 1 stepping 1 microcode 0x0"
      CPUInfo.getFeatures(): [cx8, cmov, fxsr, ht, mmx, 3dnowpref, sse, sse2, sse3, ssse3, sse4a, sse4.1, sse4.2, popcnt, lzcnt, tsc, avx, avx2, aes, erms, clmul, bmi1, bmi2, adx, sha, fma, vzeroupper, clflush, clflushopt, hv, rdtscp, rdpid, f16c, pku]
      Well-known CPU features: [clmul, avx512cd, avx512f, sse4a, cmov, fxsr, rdpid, lzcnt, rtm, ht, fma, clwb, rdtscp, hv, avx512_vpopcntdq, avx512_vaes, tscinvbit, vzeroupper, avx512dq, gfni, fsrm, adx, f16c, sse4.1, sse4.2, avx512_vbmi, avx512_vbmi2, sha, avx2, avx512vl, tscinv, avx512_vpclmulqdq, avx512_vnni, popcnt, bmi1, bmi2, avx512er, sse2, sse3, avx, aes, avx512pf, cx8, 3dnowpref, sse, avx512bw, ssse3, mmx, clflushopt, tsc, avx512_bitalg, erms, clflush]
      ----------System.err:(13/823)----------
      java.lang.RuntimeException: not all features are known: expected true, was false
      at jdk.test.lib.Asserts.fail(Asserts.java:594)
      at jdk.test.lib.Asserts.assertTrue(Asserts.java:486)
      at CPUInfoTest.main(CPUInfoTest.java:93)
      at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
      at java.base/java.lang.reflect.Method.invoke(Method.java:578)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:125)
      at java.base/java.lang.Thread.run(Thread.java:1591)

      JavaTest Message: Test threw exception: java.lang.RuntimeException: not all features are known: expected true, was false

            Assignee:
            Vladimir Kozlov
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: