8295844: jdk/test/whitebox/CPUInfoTest.java failed with "not all features are known: expected true, was false"

Reviewed-by: tschatzl, dnsimon